--- a/frontmarket/index.html
+++ b/frontmarket/index.html
@@ -8,7 +8,7 @@
  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Gerenciamento de Marketing</title>
+    <title>Sistema de Gestão-APAE</title>
   </head>
   <body>
     <div id="root"></div>
